[zpi-160] dealing group locations scopes comment service implemented